<resources>
    <string name="app_name">rvSkyHighEmployees</string>

    //Main Activity Strings
    <string name="btnAddEditEmployees">Add Employee</string>
    <string name="alertTitle">Remove Employee</string>
    <string name="alertMessage">Are You Sure You Want To Remove An Employee?</string>

    //All Placeholder Hints For Tv Strings Throughout Project
    <string name="tvEmployeeNameHINT">Employee Name</string>
    <string name="tvEmployeeDepartmentHINT">Department</string>
    <string name="tvRowLayoutEmployeeIdHINT">Id</string>

    //All Employee Image Content Descriptions
    <string name="ivEmployeeImageContentDescription">An Image of An Employee</string>

    //Individual Employee Activity Title
    <string name="tvIndEmployeeTitle">Individual Employee</string>
    <string name="tvIndEmployeeNameHINT">Name</string>
    <string name="tvIndEmployeeIdHINT">Id</string>
    <string name="tvIndEmployeeDeptHINT">Department</string>

    //All Button Strings
    <string name="btnReturnHome">Return To All Employees</string>
    <string name="btnAddEditEmployeeSave">Save Current</string>
    <string name="btnAddEditEmployeeCancel">Cancel</string>
    <string name="btnAddEditEmployeeAdd">Add New</string>

    //SplashScreen Activity Strings
    <string name="tvSplashScreenTitle">Sky High Employee Database</string>
    <string name="tvSplashScreenProjectCreator">By Nick Cottner</string>
    <string name="ivSplashScreenFakeSchool">Image of Fictional School</string>

    //Add/Edit Employee Activity Strings
    <string name="tvAddEditEmployeeId">Employee Id:</string>
    <string name="tvAddEditEmployeeIDHINT">Enter Id</string>
    <string name="tvAddEditEmployeeName">Employee Name:</string>
    <string name="tvAddEditEmployeeNameHINT">Enter Name</string>
    <string name="tvAddEditEmployeeDept">Employee Dept:</string>
    <string name="tvAddEditEmployeeDeptHINT">Enter Department</string>
    <string name="tvAddEditEmployeeImage">Employee Image Url:</string>
    <string name="tvAddEditEmployeeImageHINT">Enter Emp Image Url</string>


    //Submenu Strings
    <string name="subMenuEmployeeSearchTitle">Employee Search</string>
    <string name="subMenuEmployeeSearchAscendingTitle">All Employees Ascending</string>
    <string name="subMenuEmployeeSearchDescendingTitle">All Employees Descending</string>
    <string name="subMenuDepartmentSearchTitle">Department Search</string>
    <string name="subMenuDepartmentSearchAscendingTitle">All Departments Ascending</string>
    <string name="subMenuDepartmentSearchDescendingTitle">All Departments Descending</string>

</resources>